--- a/logstash/filbeat.conf
+++ b/logstash/filbeat.conf
@@ -1,29 +1,42 @@
 input {
-	http {
-		host => "localhost" # default: 0.0.0.0
-		port => 8081 # default: 8080
-	}
+	beats {
+    		port => "5044"
+  	}
 }
 
-## Add your filters / logstash plugins configuration here
 filter {
+	if " Event:" not in [message] {
+	  drop {}
+	}
+	grok {
+		ecs_compatibility => disabled
+		match => {
+			'message' => 'Unique ID: %{GREEDYDATA:eventType},\n Event: %{GREEDYDATA:eventdata}'
+		}
+	}
+	json {
+		ecs_compatibility => disabled
+		source => "eventdata"
+		remove_field => ["eventdata","message"]
+	}
+
 	#geo ip filter to transform the IP address to location
 	geoip {
 		ecs_compatibility => disabled
 		source => "[event][payloadData][remoteIp]"
 	}
 
-	#user agent filter to transform the userAgent string into seperated fields
-	useragent {
-		source => "[event][payloadData][userAgent]"
-		target => "userAgentDetails"
+	if [event][payloadData][identityProvider] == "LOCAL" {
+		mutate {
+        	update => { 
+				"[event][payloadData][identityProvider]" => "Resident"
+			}
+      	}
 	}
-
-
 
 	#ruby code to convert the comma seperated roles into an array
 	ruby{
-	    code =>"
+	     code =>"
 
 		 # method to split the supplied string by comma, trim whitespace and return an array
 		 def mapStringToArray(strFieldValue)
@@ -44,19 +57,11 @@ filter {
 	"
 	}
 
-	if [event][payloadData][identityProvider] == "LOCAL" {
-		mutate {
-        	update => { 
-				"[event][payloadData][identityProvider]" => "Resident"
-			}
-      	}
-	}
-
 	# debug timestamp
 	if ("" in [mtime]) {
 		date {
-			match => [ "mtime" , "yyyy-MM-dd HH:mm:ss.SSS" ]
-			target => "@timestamp"
+    			match => [ "mtime" , "yyyy-MM-dd HH:mm:ss.SSS" ]
+    			target => "@timestamp"
 			locale => "en"
 			timezone => "Asia/Colombo"
 		}
@@ -64,11 +69,9 @@ filter {
 }
 
 output {
-
-	#seperating event type as auth and session via the eventtype header
+	#seperating event type as auth and session via the eventtype
 	stdout { codec => json }
-
-	if [@metadata][input][http][request][headers][eventtype] == "auth"{
+	if [eventType] == "auth"{
 		elasticsearch {
 			hosts => ["http://localhost:9200"]
 			#cacert => "/etc/logstash/config/certs/ca.crt"
@@ -76,7 +79,7 @@ output {
 			password => "changeme"
 			index => "auth"
 		}
-	} else if [@metadata][input][http][request][headers][eventtype] == "session"{
+	} else if [eventType] == "session"{
 		elasticsearch {
 			hosts => ["http://localhost:9200"]
 			#cacert => "/etc/logstash/config/certs/ca.crt"
@@ -86,4 +89,13 @@ output {
 			document_id => "%{[event][payloadData][sessionId]}"
 		}
 	}
-} 
+
+	elasticsearch {
+		hosts => ["http://localhost:9200"]
+		#cacert => "/etc/logstash/config/certs/ca.crt"
+		user => "wso2user"
+		password => "changeme"
+		index => "test"
+		document_id => "%{[event][payloadData][sessionId]}"
+	}
+}
