--- a/elasticsearch/elastic.yml
+++ b/elasticsearch/elastic.yml
@@ -39,6 +39,23 @@ xpack.security.authc.realms.saml.saml1:
   sp.logout: "http://localhost:5601/logout"
   attributes.principal: nameid
   attributes.groups: groups
+xpack.security.authc.realms.oidc.oidc2:
+  order: 4
+  rp.client_id: "IwlQ7RF_vYDSsLznh5ccJ7rfmAka" #Iw7A53qnxDbhJfy6zVSVbf_Iihoa 5.11
+  rp.response_type: code
+  rp.redirect_uri: "http://localhost:5601/api/security/oidc/callback"
+  op.issuer: "https://localhost:9443/oauth2/token"
+  op.authorization_endpoint: "https://localhost:9443/oauth2/authorize"
+  op.token_endpoint: "https://localhost:9443/oauth2/token"
+  op.jwkset_path: "https://localhost:9443/oauth2/jwks"
+  op.endsession_endpoint: "https://localhost:9443/oidc/logout"
+  op.userinfo_endpoint: "https://localhost:9443/oauth2/userinfo"
+  rp.post_logout_redirect_uri: "http://localhost:5601/security/logged_out"
+  claims.principal: sub
+  ssl.verification_mode: none
+  claims.groups: groups
+  claims.name: name
+  claims.mail: email
 
 # Create a new cluster with the current node only
 # Additional nodes can still join the cluster later
