--- a/elasticsearch/elastic.yml
+++ b/elasticsearch/elastic.yml
@@ -2,16 +2,16 @@ xpack.license.self_generated.type: trial
 xpack.security.enabled: true
 xpack.security.authc.token.enabled: true
 
-xpack.security.http.ssl:
-  enabled: false
-  keystore.path: certs/http.p12
+# xpack.security.http.ssl:
+#   enabled: true
+#   keystore.path: certs/http.p12
 
-# Enable encryption and mutual authentication between cluster nodes
-xpack.security.transport.ssl:
-  enabled: false
-  verification_mode: certificate
-  keystore.path: certs/transport.p12
-  truststore.path: certs/transport.p12
+# # Enable encryption and mutual authentication between cluster nodes
+# xpack.security.transport.ssl:
+#   enabled: true
+#   verification_mode: certificate
+#   keystore.path: certs/transport.p12
+#   truststore.path: certs/transport.p12
 
 
 xpack.security.authc.realms.saml.saml1:
