--- a/elasticsearch/elastic.yml
+++ b/elasticsearch/elastic.yml
@@ -2,13 +2,13 @@ xpack.license.self_generated.type: trial
 xpack.security.enabled: true
 xpack.security.authc.token.enabled: true
 
-# xpack.security.http.ssl:
-#   enabled: true
+xpack.security.http.ssl:
+  enabled: false
 #   keystore.path: certs/http.p12
 
-# # Enable encryption and mutual authentication between cluster nodes
-# xpack.security.transport.ssl:
-#   enabled: true
+# Enable encryption and mutual authentication between cluster nodes
+xpack.security.transport.ssl:
+  enabled: false
 #   verification_mode: certificate
 #   keystore.path: certs/transport.p12
 #   truststore.path: certs/transport.p12
