--- a/logstash/filbeat.conf
+++ b/logstash/filbeat.conf
@@ -69,33 +69,33 @@ filter {
 }
 
 output {
-	#seperating event type as auth and session via the eventtype
+
+	#seperating event type as auth and session via the eventtype header
 	stdout { codec => json }
-	if [eventType] == "auth"{
+	elasticsearch {
+		hosts => ["https://localhost:9200"]
+		cacert => "/etc/logstash/config/certs/http_ca.crt"
+		user => "wso2user"
+		password => "changeme"
+		index => "auth"
+	}
+
+	if [@metadata][input][http][request][headers][eventtype] == "auth"{
 		elasticsearch {
-			hosts => ["http://localhost:9200"]
-			#cacert => "/etc/logstash/config/certs/ca.crt"
+			hosts => ["https://localhost:9200"]
+			cacert => "/etc/logstash/config/certs/http_ca.crt"
 			user => "wso2user"
 			password => "changeme"
 			index => "auth"
 		}
-	} else if [eventType] == "session"{
+	} else if [@metadata][input][http][request][headers][eventtype] == "session"{
 		elasticsearch {
-			hosts => ["http://localhost:9200"]
-			#cacert => "/etc/logstash/config/certs/ca.crt"
+			hosts => ["https://localhost:9200"]
+			cacert => "/etc/logstash/config/certs/http_ca.crt"
 			user => "wso2user"
 			password => "changeme"
 			index => "session"
 			document_id => "%{[event][payloadData][sessionId]}"
 		}
 	}
-
-	elasticsearch {
-		hosts => ["http://localhost:9200"]
-		#cacert => "/etc/logstash/config/certs/ca.crt"
-		user => "wso2user"
-		password => "changeme"
-		index => "test"
-		document_id => "%{[event][payloadData][sessionId]}"
-	}
-}
+} 
