--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -67,19 +67,26 @@ output {
 
 	#seperating event type as auth and session via the eventtype header
 	stdout { codec => json }
+	elasticsearch {
+		hosts => ["https://localhost:9200"]
+		cacert => "/etc/logstash/config/certs/http_ca.crt"
+		user => "wso2user"
+		password => "changeme"
+		index => "auth"
+	}
 
 	if [@metadata][input][http][request][headers][eventtype] == "auth"{
 		elasticsearch {
-			hosts => ["http://localhost:9200"]
-			#cacert => "/etc/logstash/config/certs/ca.crt"
+			hosts => ["https://localhost:9200"]
+			cacert => "/etc/logstash/config/certs/http_ca.crt"
 			user => "wso2user"
 			password => "changeme"
 			index => "auth"
 		}
 	} else if [@metadata][input][http][request][headers][eventtype] == "session"{
 		elasticsearch {
-			hosts => ["http://localhost:9200"]
-			#cacert => "/etc/logstash/config/certs/ca.crt"
+			hosts => ["https://localhost:9200"]
+			cacert => "/etc/logstash/config/certs/http_ca.crt"
 			user => "wso2user"
 			password => "changeme"
 			index => "session"
