--- a/logstash/filbeat.conf
+++ b/logstash/filbeat.conf
@@ -69,29 +69,18 @@ filter {
 }
 
 output {
-
-	#seperating event type as auth and session via the eventtype header
-	stdout { codec => json }
-	elasticsearch {
-		hosts => ["https://localhost:9200"]
-		cacert => "/etc/logstash/config/certs/http_ca.crt"
-		user => "wso2user"
-		password => "changeme"
-		index => "auth"
-	}
-
-	if [@metadata][input][http][request][headers][eventtype] == "auth"{
+	if [eventType] == "auth"{
 		elasticsearch {
-			hosts => ["https://localhost:9200"]
-			cacert => "/etc/logstash/config/certs/http_ca.crt"
+			hosts => ["http://localhost:9200"]
+			#cacert => "/etc/logstash/config/certs/ca.crt"
 			user => "wso2user"
 			password => "changeme"
 			index => "auth"
 		}
-	} else if [@metadata][input][http][request][headers][eventtype] == "session"{
+	} else if [eventType] == "session"{
 		elasticsearch {
-			hosts => ["https://localhost:9200"]
-			cacert => "/etc/logstash/config/certs/http_ca.crt"
+			hosts => ["http://localhost:9200"]
+			#cacert => "/etc/logstash/config/certs/ca.crt"
 			user => "wso2user"
 			password => "changeme"
 			index => "session"
