--- a/logstash/filbeat.conf
+++ b/logstash/filbeat.conf
@@ -71,7 +71,7 @@ filter {
 output {
 	if [eventType] == "auth"{
 		elasticsearch {
-			hosts => ["http://localhost:9200"]
+			hosts => ["https://localhost:9200"]
 			#cacert => "/etc/logstash/config/certs/http_ca.crt"
 			user => "wso2user"
 			password => "changeme"
@@ -79,7 +79,7 @@ output {
 		}
 	} else if [eventType] == "session"{
 		elasticsearch {
-			hosts => ["http://localhost:9200"]
+			hosts => ["https://localhost:9200"]
 			#cacert => "/etc/logstash/config/certs/http_ca.crt"
 			user => "wso2user"
 			password => "changeme"
