--- a/logstash/filbeat.conf
+++ b/logstash/filbeat.conf
@@ -70,11 +70,11 @@ filter {
 
 output {
 	#seperating event type as auth and session via the eventtype
-	stdout { codec => json }
+	#stdout { codec => json }
 	if [eventType] == "auth"{
 		elasticsearch {
 			hosts => ["http://localhost:9200"]
-			#cacert => "/etc/logstash/config/certs/ca.crt"
+			cacert => "/etc/logstash/config/certs/ca.crt"
 			user => "wso2user"
 			password => "changeme"
 			index => "auth"
@@ -82,20 +82,11 @@ output {
 	} else if [eventType] == "session"{
 		elasticsearch {
 			hosts => ["http://localhost:9200"]
-			#cacert => "/etc/logstash/config/certs/ca.crt"
+			cacert => "/etc/logstash/config/certs/ca.crt"
 			user => "wso2user"
 			password => "changeme"
 			index => "session"
 			document_id => "%{[event][payloadData][sessionId]}"
 		}
-	}
-
-	elasticsearch {
-		hosts => ["http://localhost:9200"]
-		#cacert => "/etc/logstash/config/certs/ca.crt"
-		user => "wso2user"
-		password => "changeme"
-		index => "test"
-		document_id => "%{[event][payloadData][sessionId]}"
 	}
 }
