--- a/logstash/filbeat.conf
+++ b/logstash/filbeat.conf
@@ -73,7 +73,7 @@ output {
 	#stdout { codec => json }
 	if [eventType] == "auth"{
 		elasticsearch {
-			hosts => ["http://localhost:9200"]
+			hosts => ["https://localhost:9200"]
 			cacert => "/etc/logstash/config/certs/ca.crt"
 			user => "wso2user"
 			password => "changeme"
@@ -81,7 +81,7 @@ output {
 		}
 	} else if [eventType] == "session"{
 		elasticsearch {
-			hosts => ["http://localhost:9200"]
+			hosts => ["https://localhost:9200"]
 			cacert => "/etc/logstash/config/certs/ca.crt"
 			user => "wso2user"
 			password => "changeme"
